controller/test/e2e/features/agentgateway/testdata/agw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: default
  labels:
    example: httpbin-route
spec:
  parentRefs:
    - name: gateway
      namespace: agentgateway-base
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - name: httpbin
          port: 8000
